@@ -30,12 +30,8 @@
       <file leaf-file-name="index.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/index.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="21" column="39" selection-start="786" selection-end="786" vertical-scroll-proportion="5.1923075">
-              <folding>
-                <marker date="1361680368314" expanded="true" signature="2945:3469" placeholder="..." />
-                <marker date="1361680368314" expanded="true" signature="2968:3444" placeholder="..." />
-                <marker date="1361680368314" expanded="true" signature="2997:3347" placeholder="..." />
-              </folding>
+            <state line="21" column="39" selection-start="786" selection-end="786" vertical-scroll-proportion="13.038462">
+              <folding />
             </state>
           </provider>
         </entry>
@@ -43,7 +39,7 @@
       <file leaf-file-name="comments.php" pinned="false" current="false" current-in-tab="false">
         <entry file="file://$PROJECT_DIR$/comments.php">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="20" column="76" selection-start="538" selection-end="613" vertical-scroll-proportion="-13.076923">
+            <state line="21" column="0" selection-start="614" selection-end="614" vertical-scroll-proportion="-12.615385">
               <folding />
             </state>
           </provider>
@@ -52,7 +48,7 @@
       <file leaf-file-name="changelog.txt" pinned="false" current="true" current-in-tab="true">
         <entry file="file://$PROJECT_DIR$/changelog.txt">
           <provider selected="true" editor-type-id="text-editor">
-            <state line="4" column="0" selection-start="83" selection-end="83" vertical-scroll-proportion="0.10044313">
+            <state line="5" column="69" selection-start="228" selection-end="228" vertical-scroll-proportion="0.12555392">
               <folding />
             </state>
           </provider>
@@ -356,7 +352,11 @@
       <created>1361680413925</created>
       <updated>1361680413925</updated>
     </task>
-    <option name="localTasksCounter" value="23" />
+    <task id="LOCAL-00023" summary="* Added filtered text messages when comments are open/closed but none exist">
+      <created>1361723162368</created>
+      <updated>1361723162368</updated>
+    </task>
+    <option name="localTasksCounter" value="24" />
     <servers />
   </component>
   <component name="TodoView" selected-index="0">
@@ -383,6 +383,7 @@
     <frame x="-8" y="-8" width="1616" height="876" extended-state="6" />
     <editor active="true" />
     <layout>
+      <window_info id="Messages" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="7" side_tool="false" content_ui="tabs" />
       <window_info id="Changes" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.328125" sideWeight="0.5" order="7" side_tool="false" content_ui="tabs" />
       <window_info id="TODO" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.32867134" sideWeight="0.5" order="6" side_tool="false" content_ui="tabs" />
       <window_info id="Database" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="3" side_tool="false" content_ui="tabs" />
@@ -401,7 +402,6 @@
       <window_info id="Message" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Ant Build" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="1" side_tool="false" content_ui="tabs" />
       <window_info id="Find" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.32700893" sideWeight="0.5" order="1" side_tool="false" content_ui="tabs" />
-      <window_info id="Messages" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="7" side_tool="false" content_ui="tabs" />
       <window_info id="Commander" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.4" sideWeight="0.5" order="0" side_tool="false" content_ui="tabs" />
       <window_info id="Dependency Viewer" active="false" anchor="bottom" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.33" sideWeight="0.5" order="7" side_tool="false" content_ui="tabs" />
       <window_info id="Hierarchy" active="false" anchor="right" auto_hide="false" internal_type="DOCKED" type="DOCKED" visible="false" weight="0.25" sideWeight="0.5" order="2" side_tool="false" content_ui="combo" />
@@ -443,7 +443,7 @@
     <option name="SHOW_VCS_ERROR_NOTIFICATIONS" value="true" />
     <option name="FORCE_NON_EMPTY_COMMENT" value="false" />
     <option name="CLEAR_INITIAL_COMMIT_MESSAGE" value="false" />
-    <option name="LAST_COMMIT_MESSAGE" value="* Update version compatibility in main theme block as well as update copyright years" />
+    <option name="LAST_COMMIT_MESSAGE" value="* Added filtered text messages when comments are open/closed but none exist" />
     <option name="MAKE_NEW_CHANGELIST_ACTIVE" value="true" />
     <option name="OPTIMIZE_IMPORTS_BEFORE_PROJECT_COMMIT" value="false" />
     <option name="CHECK_FILES_UP_TO_DATE_BEFORE_COMMIT" value="false" />
@@ -456,7 +456,6 @@
     <option name="UPDATE_GROUP_BY_CHANGELIST" value="false" />
     <option name="SHOW_FILE_HISTORY_AS_TREE" value="false" />
     <option name="FILE_HISTORY_SPLITTER_PROPORTION" value="0.6" />
-    <MESSAGE value="Revert wp_get_theme calls" />
     <MESSAGE value="Minor updates for WordPress 3.4-beta1 deprecated functions" />
     <MESSAGE value="Re-wrote updates to be backward compatible" />
     <MESSAGE value="Refactor `dmm_wp_title` to more correctly use filter while maintaining backward-compatibility" />
@@ -481,6 +480,7 @@
     <MESSAGE value="* Updated 'style.css' header block to use labels as noted in core trac ticket #16868" />
     <MESSAGE value="* Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image" />
     <MESSAGE value="* Update version compatibility in main theme block as well as update copyright years" />
+    <MESSAGE value="* Added filtered text messages when comments are open/closed but none exist" />
   </component>
   <component name="XDebuggerManager">
     <breakpoint-manager />
@@ -555,25 +555,21 @@
     </entry>
     <entry file="file://$PROJECT_DIR$/index.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="21" column="39" selection-start="786" selection-end="786" vertical-scroll-proportion="5.1923075">
-          <folding>
-            <marker date="1361680368314" expanded="true" signature="2945:3469" placeholder="..." />
-            <marker date="1361680368314" expanded="true" signature="2968:3444" placeholder="..." />
-            <marker date="1361680368314" expanded="true" signature="2997:3347" placeholder="..." />
-          </folding>
+        <state line="21" column="39" selection-start="786" selection-end="786" vertical-scroll-proportion="13.038462">
+          <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/comments.php">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="20" column="76" selection-start="538" selection-end="613" vertical-scroll-proportion="-13.076923">
+        <state line="21" column="0" selection-start="614" selection-end="614" vertical-scroll-proportion="-12.615385">
           <folding />
         </state>
       </provider>
     </entry>
     <entry file="file://$PROJECT_DIR$/changelog.txt">
       <provider selected="true" editor-type-id="text-editor">
-        <state line="4" column="0" selection-start="83" selection-end="83" vertical-scroll-proportion="0.10044313">
+        <state line="5" column="69" selection-start="228" selection-end="228" vertical-scroll-proportion="0.12555392">
           <folding />
         </state>
       </provider>
