@@ -3,6 +3,7 @@ Changelog: February 24, 2013
 == Version 2.2 ==
 = Code =
 * Added filtered text messages when comments are open/closed but none exist
+* Added link to author page when comments closed message is displayed
 
 = CSS =
 * Add `clear: both` to 'img.aligncenter, img.center' to fix Firefox issue with large images placed close to the featured image
